--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/el-GR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/el-GR/Resources.resw
@@ -2794,9 +2794,17 @@
   <data name="Login_TwoFactor_EnterCode">
     <value>Εισάγετε τον κωδικό σας</value>
   </data>
+  <data name="Main_Loading">
+    <value>Φόρτωση, παρακαλούμε περιμένετε...</value>
+    <comment>Message in the loading screen when starting the app</comment>
+  </data>
   <data name="Main_Loading_SigningIn">
     <value>Σύνδεση, παρακαλούμε περιμένετε...</value>
-    <comment>Message in the loading screen when signing in or starting the app</comment>
+    <comment>Message in the loading screen when signing in</comment>
+  </data>
+  <data name="Main_Loading_SigningIn_Longer">
+    <value>Αυτό διαρκεί περισσότερο από το συνηθισμένο, αλλά εργαζόμαστε πάνω σε αυτό.</value>
+    <comment>Message in the loading screen when sign in action takes longer than expected</comment>
   </data>
   <data name="Main_Loading_SigningOut">
     <value>Αποσύνδεση, παρακαλούμε περιμένετε...</value>
