--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-PT/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-PT/Resources.resw
@@ -2794,9 +2794,17 @@ Uma carga elevada do servidor pode diminuir a sua conexão.</value>
   <data name="Login_TwoFactor_EnterCode">
     <value>Introduza o seu código</value>
   </data>
+  <data name="Main_Loading">
+    <value>A carregar. Aguarde...</value>
+    <comment>Message in the loading screen when starting the app</comment>
+  </data>
   <data name="Main_Loading_SigningIn">
     <value>A iniciar sessão. Aguarde...</value>
-    <comment>Message in the loading screen when signing in or starting the app</comment>
+    <comment>Message in the loading screen when signing in</comment>
+  </data>
+  <data name="Main_Loading_SigningIn_Longer">
+    <value>Isto demora mais do que o habitual, mas trabalhamos nisso.</value>
+    <comment>Message in the loading screen when sign in action takes longer than expected</comment>
   </data>
   <data name="Main_Loading_SigningOut">
     <value>A terminar sessão. Aguarde...</value>
