--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-BR/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/pt-BR/Resources.resw
@@ -2794,9 +2794,17 @@ Uma carga alta de servidor pode tornar sua conexão mais lenta.</value>
   <data name="Login_TwoFactor_EnterCode">
     <value>Digite seu código</value>
   </data>
+  <data name="Main_Loading">
+    <value>Carregando. Aguarde...</value>
+    <comment>Message in the loading screen when starting the app</comment>
+  </data>
   <data name="Main_Loading_SigningIn">
     <value>Iniciando sessão. Aguarde...</value>
-    <comment>Message in the loading screen when signing in or starting the app</comment>
+    <comment>Message in the loading screen when signing in</comment>
+  </data>
+  <data name="Main_Loading_SigningIn_Longer">
+    <value>Está demorando mais que o normal, mas estamos trabalhando nisso.</value>
+    <comment>Message in the loading screen when sign in action takes longer than expected</comment>
   </data>
   <data name="Main_Loading_SigningOut">
     <value>Encerrando sessão. Aguarde...</value>
