--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sl-SI/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sl-SI/Resources.resw
@@ -3010,9 +3010,17 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
   <data name="Login_TwoFactor_EnterCode">
     <value>Vnesite kodo</value>
   </data>
+  <data name="Main_Loading">
+    <value>Loading, please wait...</value>
+    <comment>Message in the loading screen when starting the app</comment>
+  </data>
   <data name="Main_Loading_SigningIn">
     <value>Prijavljanje. Prosimo, počakajte ...</value>
-    <comment>Message in the loading screen when signing in or starting the app</comment>
+    <comment>Message in the loading screen when signing in</comment>
+  </data>
+  <data name="Main_Loading_SigningIn_Longer">
+    <value>This is taking longer than usual, but we're working on it.</value>
+    <comment>Message in the loading screen when sign in action takes longer than expected</comment>
   </data>
   <data name="Main_Loading_SigningOut">
     <value>Odjavljanje. Prosimo, počakajte ...</value>
